# bytecoding

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
bytecoding_derive/: Cargo.toml
bytecoding_derive/src/: impl_enum.rs  impl_struct.rs  lib.rs
src/: lib.rs
tests/: derive.rs
